deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-portal
  namespace: ml-portal
  labels:
    k8s-app: ml-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: ml-portal
  template:
    metadata:
      labels:
        k8s-app: ml-portal
    spec:
      volumes:
        - name: portalconf
          secret:
            secretName: portalconf-secret
        - name: kubeconfig
          secret:
            secretName: kubeconfig-secret
      containers:
        - name: ml-portal
          image: ataylor89/ml-portal-amd64:latest
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /usr/local/etc/ml-portal
              name: portalconf
            - mountPath: /usr/local/etc/kube
              name: kubeconfig
          ports:
            - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: ml-portal
  namespace: ml-portal
  labels:
    k8s-app: ml-portal
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    k8s-app: ml-portal
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ml-portal
  namespace: ml-portal
  labels:
    k8s-app: ml-portal
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod-nginx
spec:
  tls:
    - hosts:
        - analytics.mwt2.org
      secretName: mlportal-tls
  rules:
    - host: analytics.mwt2.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ml-portal
                port:
                  number: 80
